Fixed button offscreen on small displays

--- a/pwnstar/ws_static/css/main.css
+++ b/pwnstar/ws_static/css/main.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 .pwnstar-tabs {
-    height: 30px;
+    /*height: 30px;*/
     background-color: #282828;
     user-select: none;
 }
